# Ascii-Renderer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
engine/: CMakeLists.txt  Ray.h  Scene.h  Terminal.h  Vec3.cpp  Vec3.h
engine/geometry/: Sphere.h
engine/math/: Vector3.cpp  Vector3.h
engine/math_utils/: Ray.cpp  Ray.h  Vector3.cpp  Vector3.h
engine/renderer/: Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  Terminal.h
src/: CMakeLists.txt  Ray.h  Scene.cpp  Scene.h
tests/: Ray_test.cpp  Vector3_test.cpp
